# ttsmms

./: .gitignore  README.md  example.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: build.yaml
scripts/: create_langs.py  requirements.txt  support_list_with_ietf.txt
tests/: test_ttsmms.py
ttsmms/: __init__.py  commons.py  ssml.py
