[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py3-ttsmms"
version = "0.8"
description = "Text-to-speech with The Massively Multilingual Speech (MMS) project"
authors = [{name = "willwade", email = "willwade@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"

dependencies = [
    "Cython >=3.0.10",
    "numba==0.51.0",
    "librosa ==0.10.0",
    "scipy ==1.7.3",
    "numpy ==1.21.4",
    "phonemizer >=3.2.1",
    "torch >=2.3.1",
    "Unidecode >=1.3.7",
    "monotonic-align >=1.0.0"
]

[project.urls]
Homepage = "https://github.com/willwade/ttsmms"
Repository = "https://github.com/willwade/ttsmms"
